--- a/index.html
+++ b/index.html
@@ -21,7 +21,46 @@
 			cursor: pointer;
 		}
 
-	</style>
-	<script type="text/javascript" src="build/bundle.js"></script>
+
+
+/*
+ * Off Canvas
+ * --------------------------------------------------
+ */
+ @media screen and (max-width: 768px) {
+ 	.row-offcanvas {
+ 		position: relative;
+ 		-webkit-transition: all 0.25s ease-out;
+ 		-moz-transition: all 0.25s ease-out;
+ 		transition: all 0.25s ease-out;
+ 	}
+
+ 	.row-offcanvas-right
+ 	.sidebar-offcanvas {
+ 		right: -50%; /* 6 columns */
+ 	}
+
+ 	.row-offcanvas-left
+ 	.sidebar-offcanvas {
+ 		left: -50%; /* 6 columns */
+ 	}
+
+ 	.row-offcanvas-right.active {
+ 		right: 50%; /* 6 columns */
+ 	}
+
+ 	.row-offcanvas-left.active {
+ 		left: 50%; /* 6 columns */
+ 	}
+
+ 	.sidebar-offcanvas {
+ 		position: absolute;
+ 		top: 0;
+ 		width: 50%; /* 6 columns */
+ 	}
+ }
+
+</style>
+<script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
