--- a/index.html
+++ b/index.html
@@ -4,76 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=0 ">
 	<link type="text/css" rel="stylesheet" href="build/bootstrap-3.3.6-dist/css/bootstrap.min.css"  media="screen,projection"/>
-	<link type="text/css" rel="stylesheet" href="build/animate.min.css"  media="screen,projection"/>
 	<title>ngexplorer</title>
 </head>
 <body>
-	<div class="container">
-		<div id="container"></div>
-	</div> 
-
-	<style type="text/css">
-		
-		tr:hover{
-			background-color: #DAD9D9 !important;
-			cursor: pointer;
-		}
-		li:hover{
-			cursor: pointer;
-		}
-
-
-		
-		.fade-transiton:{
-			transition: all 3s ease;
-		}
-		.fade-enter, .fade-leave{
-			opacity: 0
-			transform: translate3d(10px, 0, 0);
-		}
-
-		.invisible{
-			display: none
-		}
-	
-/*
- * Off Canvas
- * --------------------------------------------------
- */
- @media screen and (max-width: 768px) {
- 	.row-offcanvas {
- 		position: relative;
- 		-webkit-transition: all 0.25s ease-out;
- 		-moz-transition: all 0.25s ease-out;
- 		transition: all 0.25s ease-out;
- 	}
-
- 	.row-offcanvas-right
- 	.sidebar-offcanvas {
- 		right: -50%; /* 6 columns */
- 	}
-
- 	.row-offcanvas-left
- 	.sidebar-offcanvas {
- 		left: -50%; /* 6 columns */
- 	}
-
- 	.row-offcanvas-right.active {
- 		right: 50%; /* 6 columns */
- 	}
-
- 	.row-offcanvas-left.active {
- 		left: 50%; /* 6 columns */
- 	}
-
- 	.sidebar-offcanvas {
- 		position: absolute;
- 		top: 0;
- 		width: 50%; /* 6 columns */
- 	}
- }
-
-</style>
-<script type="text/javascript" src="build/bundle.js"></script>
+<div id="app"></div>
+	<script type="text/javascript" src="build/ngexplorerVuejsClient.js"></script>
 </body>
 </html>
